# Vishwalpha-AI-Tutor

./: .dockerignore  ARCHITECTURE.md  Dockerfile.api  Dockerfile.streamlit  LICENSE  README.md  api.py  apply_logging.py  clear_data.py  debug_headers.py  docker-compose.yml  main.py  migrate.py  pyproject.toml  schemas.py  streamlit_app.py
DataSet/Class_10/Science/: chapter_10_canonical.json  chapter_11_canonical.json  chapter_12_canonical.json  chapter_13_canonical.json  chapter_1_canonical.json  chapter_2_canonical.json  chapter_3_canonical.json  chapter_4_canonical.json  chapter_5_canonical.json  chapter_6_canonical.json  chapter_7_canonical.json  chapter_8_canonical.json  chapter_9_canonical.json  class10_science.csv
core/: __init__.py  db_session.py  groq_client.py  logging_config.py
db/: auth.py  database.py  memory.py  metrics.py  models.py  profile.py  writer.py
extra_functions/: add_data.py  clear_data.py
ingestion/: cleaner.py  llm_repair.py  parser.py  pipeline.py  structurer.py  summarizer.py
retrieval/: cache.py  engine.py  query.py  redis.py  reranker.py
routing/: embedder.py  router.py  vector_store.py
tutor/: __init__.py  chat.py  llm.py  patterns.py
