[project]
name = "ai-tutor"
version = "0.1.0"
description = "A personalised AI Tutor with adaptive learning, AI-powered doubt clearing, and smart summarization of textbooks. It uses Groq LLM as the brain for the tutor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "paddleocr>=3.5.0",
    "paddlepaddle>=3.3.1",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "unstructured>=0.18.32",
    "unstructured-client>=0.42.12",
    "uvicorn>=0.46.0",
]
